Updated Alignment issue
set Table to 100%

--- a/WebApp/Styles/Main.css
+++ b/WebApp/Styles/Main.css
@@ -1,4 +1,4 @@
-﻿html, body 
+﻿html, body
 {
     margin:0;
 	padding:0;
@@ -31,6 +31,7 @@ table
 {
     margin-right: 2px;
     text-align: left;
+    width:100%
 }
 
 #header{
